@@ -19,6 +19,9 @@ import com.ailms.response.PageResponse;
 import com.ailms.request.BaseSearchRequest;
 import com.ailms.service.ICourseService;
 import com.ailms.service.INotificationService;
+import com.ailms.search.MeilisearchCourseService;
+import org.springframework.boot.context.event.ApplicationReadyEvent;
+import org.springframework.context.event.EventListener;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.ApplicationEventPublisher;
@@ -28,6 +31,8 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.util.StringUtils;
 
 import java.text.Normalizer;
 import java.time.LocalDateTime;
@@ -59,7 +64,13 @@ public class CourseService implements ICourseService {
     private final CourseTeacherRepository courseTeacherRepository;
     private final CoursePackageRepository coursePackageRepository;
     private final CourseSectionRepository courseSectionRepository;
+    private final QuizRepository quizRepository;
+    private final AssignmentRepository assignmentRepository;
     private final ReviewRepository reviewRepository;
+    private final MeilisearchCourseService meilisearchCourseService;
+    private final PublicCatalogVectorService publicCatalogVectorService;
+    @Value("${public-catalog.vector-startup-sync:false}")
+    private boolean vectorStartupSync;
 
     private static final String RESOURCE_NAME = "Course";
     private static final String CODE_PREFIX = "KH";
@@ -88,6 +99,8 @@ public class CourseService implements ICourseService {
         CourseEntity entity = prepareCourse(request, category, CourseStatusEnum.DRAFT);
 
         CourseEntity savedEntity = courseRepository.save(entity);
+        meilisearchCourseService.index(savedEntity, false);
+        publicCatalogVectorService.indexCourse(savedEntity);
         Long creatorId = savedEntity.getCreatedBy();
         if (creatorId != null && userRoleRepository.hasActiveTeacherRole(creatorId, LocalDateTime.now())) {
             assignCreatorAsCourseTeacher(savedEntity, creatorId);
@@ -114,10 +127,12 @@ public class CourseService implements ICourseService {
         CategoryEntity category = categoryRepository.findById(request.getCategoryId())
                 .orElseThrow(() -> ResourceNotFoundException.of("Category", request.getCategoryId()));
 
-        CourseEntity entity = prepareCourse(request, category, CourseStatusEnum.PENDING);
+        CourseEntity entity = prepareCourse(request, category, CourseStatusEnum.DRAFT);
         entity.setCreatedBy(teacherUserId);
 
         CourseEntity savedEntity = courseRepository.save(entity);
+        meilisearchCourseService.index(savedEntity, false);
+        publicCatalogVectorService.indexCourse(savedEntity);
         if (userRoleRepository.hasActiveTeacherRole(teacherUserId, LocalDateTime.now())) {
             assignCreatorAsCourseTeacher(savedEntity, teacherUserId);
         }
@@ -151,10 +166,21 @@ public class CourseService implements ICourseService {
         CourseEntity existingEntity = courseRepository.findById(id)
                 .orElseThrow(() -> ResourceNotFoundException.of(RESOURCE_NAME, id));
 
+        if (existingEntity.getStatus() != CourseStatusEnum.DRAFT
+                && existingEntity.getStatus() != CourseStatusEnum.REJECTED) {
+            throw new BusinessException("Chỉ được cập nhật nội dung khóa học ở trạng thái DRAFT hoặc REJECTED.");
+        }
+
         courseMapper.updateEntityFromRequest(request, existingEntity);
-        existingEntity.setLink(resolveLink(request.getLink(), request.getName()));
+        if (StringUtils.hasText(request.getLink()) || StringUtils.hasText(request.getName())) {
+            existingEntity.setLink(resolveLink(
+                    request.getLink(),
+                    StringUtils.hasText(request.getName()) ? request.getName() : existingEntity.getName()));
+        }
 
         CourseEntity updatedEntity = courseRepository.save(existingEntity);
+        meilisearchCourseService.index(updatedEntity, hasActivePackage(updatedEntity));
+        publicCatalogVectorService.indexCourse(updatedEntity);
         deactivatePackagesIfCourseNotActive(updatedEntity);
         applicationEventPublisher.publishEvent(new AuditLogEvent(this, "UPDATE", "COURSE", id, null, updatedEntity));
         return courseMapper.toResponse(updatedEntity);
@@ -168,12 +194,20 @@ public class CourseService implements ICourseService {
         CourseEntity existingEntity = courseRepository.findById(id)
                 .orElseThrow(() -> ResourceNotFoundException.of(RESOURCE_NAME, id));
 
+        if (request.getStatus() == CourseStatusEnum.PENDING || request.getStatus() == CourseStatusEnum.REJECTED) {
+            throw new BusinessException("Trạng thái duyệt khóa học chỉ được thay đổi qua quy trình phê duyệt.");
+        }
         if (request.getStatus() == CourseStatusEnum.ACTIVE) {
+            if (existingEntity.getStatus() != CourseStatusEnum.INACTIVE) {
+                throw new BusinessException("Khóa học mới chỉ được kích hoạt qua quy trình phê duyệt.");
+            }
             requireActiveSelfStudyPackage(id);
         }
         existingEntity.setStatus(request.getStatus());
 
         CourseEntity updatedEntity = courseRepository.save(existingEntity);
+        meilisearchCourseService.index(updatedEntity, hasActivePackage(updatedEntity));
+        publicCatalogVectorService.indexCourse(updatedEntity);
         deactivatePackagesIfCourseNotActive(updatedEntity);
         notifyAssignedTeachers(
                 updatedEntity,
@@ -192,10 +226,15 @@ public class CourseService implements ICourseService {
         CourseEntity course = courseRepository.findById(id)
                 .orElseThrow(() -> ResourceNotFoundException.of(RESOURCE_NAME, id));
 
+        if (course.getStatus() != CourseStatusEnum.PENDING) {
+            throw new BusinessException("Chỉ khóa học đang chờ duyệt mới được phê duyệt hoặc từ chối.");
+        }
+
         if (Boolean.TRUE.equals(request.getApprove())) {
             requireActiveSelfStudyPackage(id);
             course.setStatus(CourseStatusEnum.ACTIVE);
             course.setRejectionReason(null);
+            publishCourseAssessments(id);
             log.info("Course {} approved and activated for sale", id);
         } else {
             if (request.getRejectionReason() == null || request.getRejectionReason().trim().length() < 5) {
@@ -207,21 +246,26 @@ public class CourseService implements ICourseService {
         }
 
         CourseEntity saved = courseRepository.save(course);
+        meilisearchCourseService.index(saved, isActiveForSale(saved));
+        publicCatalogVectorService.indexCourse(saved);
         deactivatePackagesIfCourseNotActive(saved);
-        ApprovalRequestEntity approvalHistory = ApprovalRequestEntity.builder()
-                .targetType("COURSE")
-                .targetId(saved.getId())
-                .level(1)
-                .totalLevels(1)
-                .approverId(saved.getUpdatedBy())
-                .status(Boolean.TRUE.equals(request.getApprove())
-                        ? ApprovalStatusEnum.CONFIRMED
-                        : ApprovalStatusEnum.REJECTED)
-                .comment(Boolean.TRUE.equals(request.getApprove()) ? null : saved.getRejectionReason())
-                .decidedAt(LocalDateTime.now())
-                .createdBy(saved.getCreatedBy())
-                .createdAt(saved.getCreatedAt() != null ? saved.getCreatedAt() : LocalDateTime.now())
-                .build();
+        ApprovalRequestEntity approvalHistory = approvalRequestRepository
+                .findFirstByTargetTypeAndTargetIdAndStatusOrderByLevelDesc(
+                        "COURSE", saved.getId(), ApprovalStatusEnum.PENDING)
+                .orElseGet(() -> ApprovalRequestEntity.builder()
+                        .targetType("COURSE")
+                        .targetId(saved.getId())
+                        .level(1)
+                        .totalLevels(1)
+                        .createdBy(saved.getCreatedBy())
+                        .createdAt(saved.getCreatedAt() != null ? saved.getCreatedAt() : LocalDateTime.now())
+                        .build());
+        approvalHistory.setApproverId(saved.getUpdatedBy());
+        approvalHistory.setStatus(Boolean.TRUE.equals(request.getApprove())
+                ? ApprovalStatusEnum.CONFIRMED
+                : ApprovalStatusEnum.REJECTED);
+        approvalHistory.setComment(Boolean.TRUE.equals(request.getApprove()) ? null : saved.getRejectionReason());
+        approvalHistory.setDecidedAt(LocalDateTime.now());
         approvalRequestRepository.save(approvalHistory);
 
         boolean isApproved = Boolean.TRUE.equals(request.getApprove());
@@ -235,6 +279,31 @@ public class CourseService implements ICourseService {
         return courseMapper.toResponse(saved);
     }
 
+    /** Lấy danh sách khóa học PENDING từ MySQL, không dùng dữ liệu chỉ mục tìm kiếm. */
+    @Override
+    public PageResponse<CourseResponse> getPendingApprovalCourses(BaseSearchRequest request) {
+        Page<CourseEntity> page = courseRepository.findByStatus(
+                CourseStatusEnum.PENDING, request != null ? request.toPageable() : PageRequest.of(0, 10));
+        return PageResponse.from(page.map(courseMapper::toResponse));
+    }
+
+    /** Mở quiz và assignment nháp cùng lúc với khóa học được phê duyệt. */
+    private void publishCourseAssessments(Long courseId) {
+        List<QuizEntity> quizzes = quizRepository.findByCourseId(courseId);
+        quizzes.stream()
+                .filter(quiz -> quiz.getStatus() == BaseStatusEnum.DRAFT
+                        || quiz.getStatus() == BaseStatusEnum.PENDING)
+                .forEach(quiz -> quiz.setStatus(BaseStatusEnum.ACTIVE));
+        quizRepository.saveAll(quizzes);
+
+        List<AssignmentEntity> assignments = assignmentRepository.findByCourseId(courseId);
+        assignments.stream()
+                .filter(assignment -> assignment.getStatus() == BaseStatusEnum.DRAFT
+                        || assignment.getStatus() == BaseStatusEnum.PENDING)
+                .forEach(assignment -> assignment.setStatus(BaseStatusEnum.ACTIVE));
+        assignmentRepository.saveAll(assignments);
+    }
+
     @Transactional
     @Override
     public void delete(Long id) {
@@ -245,6 +314,8 @@ public class CourseService implements ICourseService {
 
         entity.setStatus(CourseStatusEnum.DELETED);
         CourseEntity saved = courseRepository.save(entity);
+        meilisearchCourseService.delete(saved.getId());
+        publicCatalogVectorService.deleteCourse(saved.getId());
         deactivatePackagesIfCourseNotActive(saved);
 
         notifyAssignedTeachers(
@@ -254,6 +325,30 @@ public class CourseService implements ICourseService {
         );
 
         applicationEventPublisher.publishEvent(new AuditLogEvent(this, "SOFT_DELETE", "COURSE", id, null, null));
+    }
+
+    /** Khởi tạo cấu hình và đồng bộ lại index khóa học sau khi ứng dụng sẵn sàng. */
+    @EventListener(ApplicationReadyEvent.class)
+    public void initializeCourseSearchIndex() {
+        if (meilisearchCourseService.isEnabled()) {
+            courseRepository.findAll().forEach(course -> meilisearchCourseService.index(course, isActiveForSale(course)));
+            meilisearchCourseService.configureIndex();
+        }
+        if (vectorStartupSync) {
+            publicCatalogVectorService.indexCourses(courseRepository.findAll());
+        }
+    }
+
+    /** Kiểm tra khóa học có package đang hoạt động để phục vụ index tìm kiếm. */
+    private boolean hasActivePackage(CourseEntity course) {
+        return isActiveForSale(course);
+    }
+
+    /** Xác định khóa học public dựa trên trạng thái và bất kỳ package đang hoạt động. */
+    private boolean isActiveForSale(CourseEntity course) {
+        return course.getStatus() == CourseStatusEnum.ACTIVE
+                && coursePackageRepository.findByCourseEntity_Id(course.getId()).stream()
+                .anyMatch(pkg -> pkg.getStatus() == CoursePackageStatusEnum.ACTIVE);
     }
 
     private void notifyAssignedTeachers(CourseEntity course, String title, String content) {
@@ -365,8 +460,7 @@ public class CourseService implements ICourseService {
                 .filter(Objects::nonNull)
                 .distinct()
                 .toList();
-        DeliveryModeEnum deliveryMode = deliveryModes.size() > 1 ? DeliveryModeEnum.COMBO
-                : deliveryModes.isEmpty() ? null : deliveryModes.get(0);
+        DeliveryModeEnum deliveryMode = deliveryModes.size() == 1 ? deliveryModes.getFirst() : null;
         int satisfactionPercent = reviewCount == 0 ? 0
                 : (int) Math.round((double) positiveReviewCount * 100 / reviewCount);
         return CourseMetricResponse.builder()
@@ -383,6 +477,11 @@ public class CourseService implements ICourseService {
     @Override
     public PageResponse<CourseResponse> search(CourseSearchRequest request) {
         log.info("Searching courses with keyword: {}", request.getKeyword());
+
+        PageResponse<CourseResponse> indexedResult = meilisearchCourseService.search(request);
+        if (indexedResult != null) {
+            return indexedResult;
+        }
 
         Page<CourseEntity> page = request.getStatus() == CourseStatusEnum.ACTIVE
                 ? courseRepository.findActiveCoursesForSale(
